--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,8 +1,8 @@
 header#main-header{
     width: 100%;
     height: 60px;
-    background: #d69d00;
-    font-size: 18px;
+    background: #993399;
+    font-size: 24px;
     font-weight: bold;
     color: #fff;
     display: flex;
