--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -25,6 +25,8 @@ border-radius: 5px;
 border: 2px solid #993399;
 background: none;
 margin-top: 10px;
+margin-left: 70px;
+margin-right: 70px;
 font-weight: bold;
 font-size: 12px;
 text-decoration: none;
