--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -58,6 +58,16 @@
     cursor:pointer;
 }
 
+.product-list .actions button[disabled] {
+    opacity: 0.3;
+    cursor: default;
+}
+
+
 .product-list .actions button:hover {
-    opacity: 0.7;
+    opacity: 0.5;
+}
+
+.product-list .actions button[disabled]:hover {
+    opacity: 0.3;
 }
